# thoth

./: Cargo.toml  README.md  config.toml  config.toml.example
.state/: peer_id
docs/superpowers/plans/: 2026-03-29-p2p-book-archiver.md
scripts/: upload_catalog_to_r2.sh
src/: catalog.rs  config.rs  error.rs  init.rs  invite.rs  lib.rs  main.rs  systemd.rs
src/checkpoint/: local.rs  mod.rs  remote.rs
src/crawler/: browser.rs  downloader.rs  extractor.rs  mod.rs  spider.rs
src/package/: compress.rs  export.rs  index.rs  ipfs.rs  manifest.rs  mod.rs  torrent.rs
src/peer/: directory.rs  mod.rs  registry.rs  shard.rs
src/storage/: mod.rs  s3.rs
tests/: storage_test.rs
