[package]
name = "thoth"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "thoth"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"
thiserror = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "json"], default-features = false }
aws-sdk-s3 = "1"
aws-sdk-sts = "1"
aws-config = "1"
sha2 = "0.10"
hex = "0.4"
zstd = "0.13"
chromiumoxide = { version = "0.6", features = ["tokio-runtime"], optional = true }
systemd = { version = "0.10", optional = true }
bytes = "1"
futures = "0.3"
tokio-util = { version = "0.7", features = ["io"] }

[features]
default = []
spider = ["chromiumoxide"]
systemd-notify = ["systemd"]

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
